Create visit start component skelton

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,7 @@
 <p>landing works!</p>
+<nav>
+  <a routerLink="/visit-start">Heroes</a>
+</nav>
 
 <div class="example-container mat-elevation-z8">
   <mat-card class="example-card">
