--- a/src/app/visit-start/visit-start.component.html
+++ b/src/app/visit-start/visit-start.component.html
@@ -1,1 +1,7 @@
-<p>visit-start works!</p>
+<div *ngIf="isOverview === true">
+    <p>Overview explanation here</p>
+    <button (click)="onNextButtonClicked()">Create visit</button>
+</div>
+<div *ngIf="isOverview === false">
+    <p>Create visit explanation here</p>
+</div>
